@@ -62,11 +62,11 @@ This code is mostly stolen from the L<< C<DistINI>|Dist::Zilla::Plugin::DistINI 
 
 use Dist::Zilla::File::FromCode;
 use String::Formatter named_stringf => {
-  -as => 'str_rf' ,
+  -as   => 'str_rf',
   codes => {
-    s =>  sub { "$_" } ,
-    S =>  sub { q{"} . "$_" . q{"} },
-    n =>  sub { int $_ },
+    s => sub { "$_" },
+    S => sub { q{"} . "$_" . q{"} },
+    n => sub { int $_ },
   },
 };
 
@@ -84,64 +84,71 @@ sub gather_files {
   {
     ## no critic (RequireInterpolationOfMetachars)
     $template = join qq{\n}, (
-      q(; Generated by %{GENPACKAGE}s version %{GENVERSION}s at %{GENTIME}s), #
-      'name             = %{name}s',                    #
-      'author           = %{author}s',                  #
-      'license          = %{license}s',                 #
-      'copyright_holder = %{copyrightholder}s',         #
-      $empty,                                           #
-      q(; Uncomment this to bootstrap via self ),       #
-      q(; [Bootstrap::lib]),                            #
-      $empty,                                           #
-      '[@Author::KENTNL]',                              #
-      'git_versions      = 1',                          #
-      'version_major     = 0',                          #
-      'version_minor     = 1',                          #
-      q(; the following data denotes when this minor was minted) , #
-      'version_rel_year  = %{rel_year}n',               #
-      'version_rel_month = %{rel_month}n',              #
-      'version_rel_day   = %{rel_day}n',                #
-      'version_rel_hour  = %{rel_hour}n',               #
-      'version_rel_time_zone = %{tz}s',                 #
-      'twitter_hash_tags = %{tags}s',                   #
-      $empty,                                           #
-      '[Prereqs]',                                       #
-      $empty,                                           #
+      q(; Generated by %{GENPACKAGE}s version %{GENVERSION}s at %{GENTIME}s),    #
+      'name             = %{name}s',                                             #
+      'author           = %{author}s',                                           #
+      'license          = %{license}s',                                          #
+      'copyright_holder = %{copyrightholder}s',                                  #
+      $empty,                                                                    #
+      q(; Uncomment this to bootstrap via self ),                                #
+      q(; [Bootstrap::lib]),                                                     #
+      $empty,                                                                    #
+      '[@Author::KENTNL]',                                                       #
+      'git_versions      = 1',                                                   #
+      'version_major     = 0',                                                   #
+      'version_minor     = 1',                                                   #
+      q(; the following data denotes when this minor was minted),                #
+      'version_rel_year  = %{rel_year}n',                                        #
+      'version_rel_month = %{rel_month}n',                                       #
+      'version_rel_day   = %{rel_day}n',                                         #
+      'version_rel_hour  = %{rel_hour}n',                                        #
+      'version_rel_time_zone = %{tz}s',                                          #
+      'twitter_hash_tags = %{tags}s',                                            #
+      $empty,                                                                    #
+      '[Prereqs]',                                                               #
+      $empty,                                                                    #
     );
   }
   my $code = sub {
     ## no critic (RegularExpressions)
     my $license = ref $zilla->license;
-    if ( $license =~ /^Software::License::(.+)$/  ){
+    if ( $license =~ /^Software::License::(.+)$/ ) {
       $license = $1;
-    } else {
+    }
+    else {
       $license = "=$license";
     }
+
     # TODO: support >1 authors. Too lazy atm, its just me. -- Kentnl - 2010-06-10
     # TODO: Actually workout whatever localtime is where Kentnl lives. Atm, its overkill. -- Kentnl - 2010-06-10
     ## no critic (ProhibitMagicNumbers)
-    my $content = str_rf ( $template , {
-        GENPACKAGE => __PACKAGE__,
-        GENVERSION => ( __PACKAGE__->VERSION || '(unversioned:dist)' ),
-        GENTIME    => ( scalar localtime ),
-        name => $zilla->name,
-        author => $zilla->authors->[0],
-        license => $license,
+    my $content = str_rf(
+      $template,
+      {
+        GENPACKAGE      => __PACKAGE__,
+        GENVERSION      => ( __PACKAGE__->VERSION || '(unversioned:dist)' ),
+        GENTIME         => ( scalar localtime ),
+        name            => $zilla->name,
+        author          => $zilla->authors->[0],
+        license         => $license,
         copyrightholder => $zilla->copyright_holder,
-        rel_year  => (localtime)[5] + 1900,
-        rel_month => (localtime)[4] + 1,
-        rel_day   => (localtime)[3],
-        rel_hour  => (localtime)[2],
-        tz        => 'Pacific/Auckland',
-        tags      => '#perl #cpan',
-    });
+        rel_year        => (localtime)[5] + 1900,
+        rel_month       => (localtime)[4] + 1,
+        rel_day         => (localtime)[3],
+        rel_hour        => (localtime)[2],
+        tz              => 'Pacific/Auckland',
+        tags            => '#perl #cpan',
+      }
+    );
     return $content;
   };
-  my $file = Dist::Zilla::File::FromCode->new({
-    name => 'dist.ini',
-    code => $code,
-  });
-  $self->add_file( $file );
+  my $file = Dist::Zilla::File::FromCode->new(
+    {
+      name => 'dist.ini',
+      code => $code,
+    }
+  );
+  $self->add_file($file);
   return 1;
 }
 
