@@ -5,13 +5,13 @@ use warnings;
 
 use CPAN::Changes;
 
-open my $fh, '>' , 'Changes.out' or die "Can't open output file Changes.out, $? $! $@";
+open my $fh, '>', 'Changes.out' or die "Can't open output file Changes.out, $? $! $@";
 
-my $string = CPAN::Changes->load('Changes', next_token => qr{{{\$NEXT}}} )->serialize;
+my $string = CPAN::Changes->load( 'Changes', next_token => qr{{{\$NEXT}}} )->serialize;
 
 $string =~ s/\h*$//gms;
 
-print { $fh } $string;
+print {$fh} $string;
 
-system 'diff','-Naur', 'Changes', 'Changes.out';
+system 'diff', '-Naur', 'Changes', 'Changes.out';
 
